--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
@@ -13,13 +14,10 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
-
     "react-spring": "^9.2.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
-
     "use-global-hook": "^0.3.0",
     "web-vitals": "^1.1.2"
   },
