--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal-video": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
