--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "final-movie-db",
   "version": "0.1.0",
+  "homepage": "/viewport",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
