--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "viewport-movie-db",
   "version": "0.1.0",
-  "homepage": "/viewport-movie-db",
+  "homepage": "https://viewport.ljferrand.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
